sliding window on safari fixed

--- a/src/Components/Page/Page.module.scss
+++ b/src/Components/Page/Page.module.scss
@@ -8,7 +8,8 @@
 .section {
   scroll-snap-align: center;
   scroll-snap-stop: always;
-  height: 100dvh;//var(--viewport-height);
+  height: 100vh;
+  height: 100svh;
   width: 100%;
 }
 
